fix: mistake computing height with margin collapsing

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,2 +1,7 @@
-#p1 {
+div {
+  background-color: green;
+}
+
+#abs {
+  position: absolute;
 }
